[gd_scene load_steps=2 format=3 uid="uid://wicpdyl66qfh"]

[ext_resource type="Script" path="res://project/scenes/ui/main_menu/main_menu_ controller.gd" id="1_kdti5"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kdti5")

[node name="SettingsControl" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="SettingsControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuControl" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MainMenuControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenuControl/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MainMenuControl/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenuControl/Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "ISLAND SURVIVAL (we need a title!)"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainMenuControl/Panel/MarginContainer/VBoxContainer2"]
clip_children = 1
layout_mode = 2
theme_override_constants/separation = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuControl/Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MainMenuControl/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="SettingsButton" type="Button" parent="MainMenuControl/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="MainMenuControl/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit
"
